--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.22.0
 openai==0.27.6
-pandas==1.5.3
 plotly==5.14.1
 plotly-express==0.4.1
 streamlit-option-menu==0.3.2
-numpy
+numpy==1.21.2
+pandas==1.3.3
