--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,7 @@ openai==0.27.6
 plotly==5.14.1
 plotly-express==0.4.1
 streamlit-option-menu==0.3.2
-numpy==1.21.2
-pandas==1.3.3
+numpy>=2.1.1
+pandas>=2.1.0
+altair<5
+protobuf<4
